# codeshot

./: .gitignore  Cargo.toml  README.md
src/: color.rs  constants.rs  error.rs  main.rs  margin.rs  options.rs
src/theme/: mod.rs
